WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55228
REGRESSION (
r79060
): Timestamp is missing from tweets in twitter.
https://bugs.webkit.org/show_bug.cgi?id=55228
Summary
REGRESSION (r79060): Timestamp is missing from tweets in twitter.
nobody
Reported
2011-02-25 09:51:01 PST
Timestamp is missing from tweets in twitter. Recent nightly builds fail to display the timestamp. The latest nightly build for Mac,
r79679
, fails to display the timestamp. Please note, the timestamp appears correctly in the latest version of Apple Safari for OS X 10.6. Without the timestamp, it is no longer possible to determine the chronology of tweets, nor the URL of individual tweets.
Attachments
Patch
(5.35 KB, patch)
2011-03-07 23:13 PST
,
Andy Estes
mitz: review+
aestes
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-02-25 21:34:55 PST
<
rdar://problem/9057871
>
Andy Estes
Comment 2
2011-02-28 15:10:23 PST
Due to <
http://trac.webkit.org/changeset/79060
>.
Andreas Kling
Comment 3
2011-03-01 02:47:42 PST
Format used by Twitter: "Sun Feb 27 13:24:51 +0000 2011"
nobody
Comment 4
2011-03-07 11:14:08 PST
Apparently, not dependent on 49989. Problem still exists (as of
r80210
). Needs to be fixed...
Andy Estes
Comment 5
2011-03-07 11:27:36 PST
(In reply to
comment #4
)
> Apparently, not dependent on 49989.
Yes it is. This bug depends on the changeset landed for
bug #49989
being in the tree. Creating the dependency relationship also helps bring the bug to the attention of the people who are most likely to fix it.
nobody
Comment 6
2011-03-07 14:05:54 PST
sorry! please pardon my misunderstanding- i believed if the bug was dependent on #49989, and #49989 was fixed, then, accordingly, the Twitter problem would also be fixed. alas, the problem is not yet fixed. thanks for your patience and kind assistance. hope this helps.
Andy Estes
Comment 7
2011-03-07 23:13:56 PST
Created
attachment 85023
[details]
Patch
Andy Estes
Comment 8
2011-03-07 23:27:45 PST
Committed
r80542
: <
http://trac.webkit.org/changeset/80542
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug